# Height_Vision_Pi

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/: main.cpp
config/: config.json  schema.json
docker/: make_new_image.sh
docker/arm64/: Dockerfile
docker/x64/: Dockerfile
include/: Injector.hpp  Logger.hpp  SummaryStats.hpp  event_loop.h
include/calculator/: HeightCalculator.hpp  PupilsDistanceCalculator.hpp
include/camera/: ArduCamCameraController.hpp  CameraCapture.hpp  CameraController.hpp  CameraManagerWrapper.hpp  DummyCameraController.hpp
include/config/: AgeDetectorConfig.hpp  CameraConfig.hpp  Config.hpp  DataSourceConfig.hpp  FaceDetectorConfig.hpp  HumanDetectorConfig.hpp  MonitorConfig.hpp  PupilsDistanceCalculatorConfig.hpp  WindowConfig.hpp
include/config/utils/: CPUMonitor.hpp  CPUMonitorConfig.hpp  ColorConfig.hpp  DiskMonitor.hpp  DiskMonitorConfig.hpp  GPUMonitorConfig.hpp  RAMMonitorConfig.hpp  Resolution.hpp  ResolutionConfig.hpp
include/detector/: AgeDetector.hpp  FaceDetector.hpp  HumanDetector.hpp
include/monitor/: CPUTemperatureMonitor.hpp  DeviceMonitor.hpp  DummyMonitor.hpp  Monitor.hpp  MonitorDevice.hpp
include/monitor/utils/: BashCommand.hpp
models/: haarcascade_frontalface_default.xml  haarcascade_pupils.xml  yolov4.cfg
scriptes/: run_docker.sh  start_app.sh
scripts/: run_docker.sh  start_app.sh
src/: Injector.cpp  Logger.cpp  SummaryStats.cpp  event_loop.cpp
src/calculator/: HeightCalculator.cpp  PupilsDistanceCalculator.cpp
src/camera/: ArduCamCameraController.cpp  CameraCapture.cpp  CameraController.cpp  CameraManagerWrapper.cpp  DummyCameraController.cpp
src/config/: Config.cpp
src/detector/: AgeDetector.cpp  FaceDetector.cpp  HumanDetector.cpp
src/monitor/: CPUTemperatureMonitor.cpp  DummyMonitor.cpp  Monitor.cpp
src/monitor/utils/: BashCommand.cpp
tests/: CMakeLists.txt
tests/camera/: CameraControllerTests.cpp
tests/functional/: CMakeLists.txt  FullFlowTest.cpp
tests/integration/: CMakeLists.txt
tests/mock/camera/: MockCameraController.hpp
tests/unit/: CMakeLists.txt  InjectorTest.cpp  LoggerTest.cpp  LoggerTests.cpp  MockLoggerTest.cpp
tests/unit/calculator/: HeightCalculatorTest.cpp  PupilsDistanceCalculatorTest.cpp
tests/unit/camera/: CameraControllerTests.cpp  DummyCameraControllerTest.cpp  MockCameraControllerTest.cpp  MockCameraControllerTests.cpp
tests/unit/detector/: AgeDetectorTest.cpp  FaceDetectorTest.cpp  FaceDetectorTests.cpp  HumanDetectorTest.cpp
tests/unit/monitor/: MockMonitorTest.cpp  MockMonitorTests.cpp  MonitorTests.cpp
tests/utils/mock/: MockLogger.cpp  MockLogger.hpp
tests/utils/mock/camera/: MockCameraController.hpp
tests/utils/mock/monitor/: MockMonitor.hpp
